--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      docker: latest
+    # runtime-versions:
+    #   docker: latest
     commands:
       - echo [*] Repo:$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo [*] Region:$AWS_DEFAULT_REGION
