--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,7 @@ phases:
   build:
     commands:
       - echo [1] Building the project... `date`
+      - docker --version
       - echo [2] Building the Docker image...
       # - docker build --cache-from $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker build -t $IMAGE_REPO_NAME .
