--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,8 @@ phases:
       - echo [*] Repo:$IMAGE_REPO_NAME 
       - echo [*] Tag:$IMAGE_TAG 
       - docker build -t $IMAGE_REPO_NAME .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      # - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker tag tf-house-bookapi-api:latest 412381760559.dkr.ecr.ap-south-1.amazonaws.com/tf-house-bookapi-api:latest
       - echo [-] Docker build completed!
 #   post_build:
 #     commands:
