--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,6 +24,7 @@ phases:
       - echo [*] Repo:$IMAGE_REPO_NAME 
       - echo [*] Tag:$IMAGE_TAG 
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - echo [*] command:docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo [-] Docker build completed!
 #   post_build:
