--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
       - docker --version
       - echo [2] Building the Docker image...
       # - docker build --cache-from $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-      - echo [*] Repo:$IMAGE_REPO_NAME 
+      - echo [*] Repo:hello$IMAGE_REPO_NAME 
       - echo [*] Tag:$IMAGE_TAG 
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - echo [*] command:docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
