--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,14 +28,14 @@ phases:
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/tf-house-bookapi-api:latest
       # - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo [-] Docker build completed!
-#   post_build:
-#     commands:
-#       # Name should be the contianer name in Task definition
-#       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > $CONTAINER_NAME.json
-#       - cat $CONTAINER_NAME.json
-#       - echo Build completed on `date`
-#       - echo Pushing the Docker image...
-#       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-#       - echo Docker image pushed to repository!
-# artifacts:
-#   files: $CONTAINER_NAME.json
+  post_build:
+    commands:
+      # Name should be the contianer name in Task definition
+      - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > $CONTAINER_NAME.json
+      - cat $CONTAINER_NAME.json
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - echo Docker image pushed to repository!
+artifacts:
+  files: $CONTAINER_NAME.json
